err/gpsreader.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GPSReader'...
Compiling './lib/python3.5/site-packages/GPSReader/GPSError.py'...
***   File "./lib/python3.5/site-packages/GPSReader/GPSError.py", line 17
    if msg <> "":
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/GPSReader/GPSReader.py'...
***   File "./lib/python3.5/site-packages/GPSReader/GPSReader.py", line 59
    if self._SerialObj <> None:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/GPSReader/NMEAtelegrams.py'...
***   File "./lib/python3.5/site-packages/GPSReader/NMEAtelegrams.py", line 37
    if (NMEAsentence[0] <> "$") or (NMEAsentence[-3] <> "*"):
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/GPSReader/NMEAutils.py'...
***   File "./lib/python3.5/site-packages/GPSReader/NMEAutils.py", line 61
    print "Uebergeben: %s %s" % (lat,ns)
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/GPSReader-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
